# demonic-tutor

./: .gitignore  AGENTS.md  CHANGELOG.md  CONSTRAINTS.md  Cargo.toml  DOMAIN_GLOSSARY.md  LICENSE  PROJECT.md  README.md  SECURITY.md  lcov.info
.agents/context/: core-agent.md
.agents/skills/: README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  dependency-freshness.yml  security.yml
agents/: core-agent.md
apps/web/: .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: README.md  agent-entrypoint.md  aggregate-game.md  context-map.md  current-state.md  development.md  system-overview.md  vertical-slices.md
docs/adr/: 0001-use-tactical-ddd.md  0002-game-is-main-aggregate.md  0003-events-are-persisted-and-published-from-application.md  0004-startgame-supports-two-players-only.md  0005-opening-hand-size-is-fixed-to-seven-in-slice-2.md  0006-playland-uses-minimal-turn-legality.md  0007-advance-turn-uses-a-minimal-turn-model.md  0008-drawcard-is-an-explicit-main-phase-action.md
docs/architecture/: adr-template.md  agent-architecture.md  game-aggregate-structure.md  gherkin-features.md  runtime-abstractions.md  slice-template.md  stack-priority-minimal-design.md  system-overview.md  vertical-slices.md  web-client.md
docs/development/: development.md
docs/domain/: DOMAIN_GLOSSARY.md  aggregate-game.md  context-map.md  current-state.md  limited-set-capability-matrix.md  limited-set-deck-construction-baseline.md  playable-subset-v1.md
docs/releases/: v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md
docs/rules/: README.md  rules-map.md
docs/slices/: README.md  advance-turn.md  cast-spell.md  creature-destruction.md  declare-attackers.md  declare-blockers.md  draw-card.md  draw-opening-hands.md  infrastructure.md  mulligan.md  pay-mana-cost.md  (+6 more)
features/: README.md
scripts/: check-all.sh  clippy.sh  coverage.sh  deps.sh  fmt.sh  security.sh  test.sh
src/: lib.rs
tests/: advance_turn.rs  bdd.rs  cast_spell.rs  deal_opening_hands.rs  draw_card.rs  infrastructure.rs  mulligan.rs  permanent_type.rs  play_land.rs  player_life.rs  start_game.rs  tap_land.rs  turn_number.rs  unit.rs
(+1133 files in other folders)
