[package]
name = "demonictutor"
version = "0.6.0"
edition = "2021"
description = "A client-side Magic: The Gathering deck playtesting and analysis application"
repository = "https://github.com/AdriRRP/demonic-tutor"
license = "MIT"
keywords = ["magic", "gathering", "mtg", "game", "playtesting"]
categories = ["game", "game-engines", "simulation"]
authors = ["DemonicTutor Contributors"]

[dependencies]
rand = "0.10.0"

[dev-dependencies]
cucumber = "0.22.1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
