[package]
name = "demonictutor"
version = "0.8.0"
edition = "2021"
description = "A client-side Magic: The Gathering deck playtesting and analysis application"
repository = "https://github.com/AdriRRP/demonic-tutor"
license = "MIT"
keywords = ["magic", "gathering", "mtg", "game", "playtesting"]
categories = ["game", "game-engines", "simulation"]
authors = ["DemonicTutor Contributors"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hashbrown = "0.16.1"
rand = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.117"

[dev-dependencies]
cucumber = "0.22.1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
